[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
quote_lib = {path = "../quote_lib"}
rand = {workspace = true} № отличная организация
crossbeam = {workspace = true}
clap = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
ctrlc = {workspace = true}